kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: moj-prototype-ingress
  namespace: moj-prototype
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/set-identifier: moj-prototype-ingress-moj-prototype-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
  - hosts:
    - moj-prototype.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: moj-prototype.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
        - path: /
          backend:
            serviceName: moj-prototype
            servicePort: 3000
